# solserver

./: Cargo.toml  test_endpoints.sh
src/: main.rs
