[package]
name = "solana-fellowship-server"
version = "0.1.0"
edition = "2021"
authors = ["Student <student@email.com>"]
description = "HTTP server for Solana operations - fellowship assignment"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4.4.0"
tokio = { version = "1.35", features = ["full"] }
env_logger = "0.10.1"

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"


# Encoding utilities
base64 = "0.21.5"
bs58 = "0.5.0"

# Solana ecosystem

spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"



ed25519-dalek = "1.0.1"  # ✅ This uses zeroize = 1.3
solana-sdk = "1.18.26"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
